--- a/src/xAuth/xAuth.csproj
+++ b/src/xAuth/xAuth.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="XSql" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
